<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<groupId>org.pac4j</groupId>
	<artifactId>pac4j</artifactId>
	<packaging>pom</packaging>
	<name>pac4j</name>
	<version>1.9.0-SNAPSHOT</version>
	<description>Profile &amp; Authentication Client for Java</description>
	<url>https://github.com/pac4j/pac4j</url>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/pac4j/pac4j.git</url>
		<connection>scm:git:git@github.com:pac4j/pac4j.git</connection>
		<developerConnection>scm:git:git@github.com:pac4j/pac4j.git</developerConnection>
	</scm>

	<developers>
		<developer>
			<id>leleuj</id>
			<name>Jerome LELEU</name>
			<email>leleuj@gmail.com</email>
		</developer>
	</developers>

	<modules>
		<module>pac4j-core</module>
		<module>pac4j-config</module>
		<module>pac4j-oauth</module>
		<module>pac4j-cas</module>
		<module>pac4j-openid</module>
		<module>pac4j-http</module>
		<module>pac4j-saml</module>
		<module>pac4j-gae</module>
		<module>pac4j-oidc</module>
		<module>pac4j-jwt</module>
		<module>pac4j-ldap</module>
		<module>pac4j-sql</module>
		<module>pac4j-mongo</module>
		<module>pac4j-stormpath</module>
	</modules>

	<properties>
		<junit.version>4.12</junit.version>
		<servlet-api.version>3.0.1</servlet-api.version>
		<logback.version>1.1.3</logback.version>
		<kryo.version>3.0.3</kryo.version>
		<commons-codec.version>1.10</commons-codec.version>
		<guava.version>19.0</guava.version>
		<spring.version>4.2.4.RELEASE</spring.version>
		<mockito.version>1.10.19</mockito.version>
		<slf4j.version>1.7.14</slf4j.version>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-oauth</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-cas</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-saml</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-oidc</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons-codec.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.esotericsoftware</groupId>
				<artifactId>kryo-shaded</artifactId>
				<version>${kryo.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<!-- for testing -->
			<dependency>
				<groupId>org.pac4j</groupId>
				<artifactId>pac4j-core</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<!-- for testing -->
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<includes>
						<include>**/*Tests.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skipTests>true</skipTests>
					<includes>
						<include>**/*IT.java</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>3.0.3</version>
				<configuration>
					<effort>Low</effort> <!-- Max -->
					<threshold>Max</threshold> <!-- Medium Low -->
					<failOnError>true</failOnError>
					<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
				</configuration>
				<executions>
					<execution>
						<id>run-findbugs</id>
						<phase>compile</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.6</version>
				<executions>
					<execution>
						<id>run-pmd</id>
						<phase>compile</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<archive>
							<!-- configure plugin to use MANIFEST.MF
                        	generated by maven-bundle-plugin -->
							<manifestFile>
								${project.build.outputDirectory}/META-INF/MANIFEST.MF
							</manifestFile>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>3.0.1</version>
					<extensions>true</extensions>
					<executions>
						<execution>
							<id>bundle-manifest</id>
							<phase>process-classes</phase>
							<goals>
								<goal>manifest</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<!-- configure plugin to support jar packaging -->
						<supportedProjectTypes>
							<supportedProjectType>jar</supportedProjectType>
						</supportedProjectTypes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
